--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Log into Docker.io
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.CAOS_DOCKER_HUB_ID}}
-          password:  ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
+          username: ${{ secrets.OHAI_DOCKER_HUB_ID }}
+          password: ${{ secrets.OHAI_DOCKER_HUB_PASSWORD }}
 
       - name: Build binaries & packages with GoReleaser
         uses: goreleaser/goreleaser-action@v4
@@ -53,9 +53,8 @@ jobs:
     uses: ./.github/workflows/component_publish.yml
     needs: [prerelease]
     secrets:
-      # TODO: change this to STAGING when testing is done
-      DOCKER_HUB_ID: ${{secrets.CAOS_DOCKER_HUB_ID}}
-      DOCKER_HUB_PASSWORD: ${{secrets.CAOS_DOCKER_HUB_PASSWORD}}
+      DOCKER_HUB_ID: ${{ secrets.OHAI_DOCKER_HUB_ID }}
+      DOCKER_HUB_PASSWORD: ${{ secrets.OHAI_DOCKER_HUB_PASSWORD }}
       GPG_PASSPHRASE: ${{ secrets.OHAI_GPG_PASSPHRASE }}
       GPG_PRIVATE_KEY_BASE64: ${{ secrets.OHAI_GPG_PRIVATE_KEY_BASE64 }} # base64 encoded
       AWS_ACCESS_KEY_ID: ${{ secrets.OHAI_AWS_ACCESS_KEY_ID_STAGING }}
@@ -88,7 +87,7 @@ jobs:
           repo_base_url: "http://nr-downloads-ohai-staging.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
           package_name: ${{ env.NR_DISTRO }}
           package_version: ${{ env.NR_VERSION }}
-          platforms: "al2,al2022,centos7,centos8,debian-bullseye,debian-buster,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204"
+          platforms: "al2,al2023,centos7,centos8,debian-bullseye,debian-buster,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204"
 
   packaging-tests:
     uses: ./.github/workflows/component_provision_packaging.yml
@@ -98,3 +97,34 @@ jobs:
       AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
     with:
       TAG_OR_UNIQUE_NAME:  ${{ github.event.release.tag_name }}
+
+  # First release: does not use canaries from previous version
+  # canaries:
+  #   uses: ./.github/workflows/component_canaries.yml
+  #   needs: [packaging-tests]
+  #   with:
+  #     TAG: ${{ github.ref_name }}
+  #     PREVIOUS_TAG: "latest"
+  #     PLATFORM: "linux"
+  #     IMAGE: "newrelic/nr-otel-collector" #should be changed after pre-release
+  #   secrets:
+  #     AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
+  #     AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
+
+  # alerts:
+  #   needs: [canaries]
+  #   uses: ./.github/workflows/component_canary_alerts.yml
+  #   secrets:
+  #     AWS_VPC_SUBNET: ${{secrets.AWS_VPC_SUBNET}}
+  #     CANARIES_NR_API_KEY: ${{ secrets.CANARIES_NR_API_KEY }}
+  #   with:
+  #     TAG: ${{ github.ref_name }}
+  #     NR_ACCOUNT_ID: 1038907
+  #     NR_REGION: Staging
+  #     INSTANCE_NAME_PATTERN: otel-canary:${{ github.ref_name }}-*
+  #     TF_STATE_KEY: nr_otel_collector_prerelease_alerts/state_${{ github.ref_name }}
+  #     TF_STATE_BUCKET: automation-pipeline-terraform-state
+  #     TF_STATE_REGION: us-east-2
+  #     POLICIES_PREFIX: "nr-otel-collector-pre-release__canaries_metric_comparator"
+  #     REF: ${{ github.ref }}
+
