--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -21,16 +21,11 @@ on:
       PLATFORM:
         required: true
         type: string
-      BRANCH_REF:
-        required: false
-        type: string
-        default: "main"
 
 env:
   TAG: ${{ inputs.TAG }}
   PREVIOUS_TAG: ${{ inputs.PREVIOUS_TAG }}
   PLATFORM: ${{ inputs.PLATFORM }}
-  GITHUB_REFERENCE_NAME: ${{ inputs.BRANCH_REF }}
   IMAGE: ${{ inputs.IMAGE }}
 
 permissions:
@@ -49,6 +44,18 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-2
 
+      - name: Set branch name
+        run: |
+          # Short name for current branch. For PRs, use target branch (base ref)
+          GIT_BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
+          # Is the ref a tag? If so, remove refs/tags/ prefix
+          GIT_BRANCH=${GIT_BRANCH#refs/tags/}
+          echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+
+      # This sets NR_VERSION which is used below
+      - name: Set and validate distribution name and version
+        run: .github/workflows/scripts/set_version.sh
+
 #      - name: Destroy infra (cleanup)
 #        uses: newrelic/fargate-runner-action@main
 #        with:
@@ -60,7 +67,7 @@ jobs:
 #          cloud_watch_logs_stream_name: ecs/test-otel-releases
 #          aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
 #          repo_name: "newrelic/opentelemetry-collector-releases"
-#          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+#          ref: "${{ env.GIT_BRANCH }}"
 #          log_filters: |
 #            Destroy\scomplete!
 
@@ -68,14 +75,14 @@ jobs:
         uses: newrelic/fargate-runner-action@main
         with:
           aws_region: us-east-2
-          container_make_target: "test/provision TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2 TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }}"
+          container_make_target: "test/provision TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2 TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }} NRDOT_VERSION=${{ env.NR_VERSION }}"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
-          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          ref: "${{ env.GIT_BRANCH }}"
           log_filters: |
             \[ALLOW_MSG\].+
             TASK\s\[.*\]\s
@@ -95,4 +102,4 @@ jobs:
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
           repo_name: "newrelic/opentelemetry-collector-releases"
-          ref: "${{ env.GITHUB_REFERENCE_NAME }}"
+          ref: "${{ env.GIT_BRANCH }}"
