--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   check-distributions:
-    name: Check distributions name
+    name: Validate distributions
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,8 +16,8 @@ jobs:
       - name: Check unique distributions names
         run: ./.github/workflows/scripts/check_distro_names.sh
   build:
-    name: Build
-    runs-on: ubuntu-20.04
+    name: Validate distributions build and third party libraries
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -30,5 +30,8 @@ jobs:
           go-version: '~1.19.4'
           check-latest: true
 
-      - name: Verify
+      - name: Verify build
         run: make ci
+
+      - name: Validate distributions third party libraries
+        run: make licenses-check
