--- a/Makefile.common
+++ b/Makefile.common
@@ -28,4 +28,4 @@ third-party-notices:
 
 .PHONY: third-party-notices-check
 third-party-notices-check: third-party-notices
-	@git diff --name-only | grep -q "THIRD_PARTY_NOTICES.md" && ( echo "Third party notices out of date, please run \"make licenses\" and commit the changes in this PR."; exit 1; ) || exit 0
+	@git diff --name-only | grep -q "THIRD_PARTY_NOTICES.md" && { echo "Third party notices out of date, please run \"make licenses\" and commit the changes in this PR.";  exit 1; } || exit 0
