--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   check-distributions:
     name: Validate distributions
@@ -16,7 +20,7 @@ jobs:
       - name: Check unique distributions names
         run: ./.github/workflows/scripts/check_distro_names.sh
   build:
-    name: Validate distributions build and third party libraries
+    name: Validate distributions build, third party libraries and security
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -35,3 +39,24 @@ jobs:
 
       - name: Validate distributions third party libraries
         run: make licenses-check
+
+      - uses: docker/setup-qemu-action@v2
+
+      - uses: docker/setup-buildx-action@v2
+
+      - name: Build binaries & packages with GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          distribution: goreleaser
+          version: latest
+          args: --snapshot --rm-dist --timeout 2h
+
+      - name: Trivy security check
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "newreilc/nr-otel-collector:0.0.0"
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: "CRITICAL,HIGH"
