--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,12 +49,12 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: --snapshot --rm-dist --timeout 2h
+          args: --snapshot --clean --timeout 2h
 
       - name: Trivy security check
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "newreilc/nr-otel-collector:0.0.0"
+          image-ref: "newrelic/nr-otel-collector:0.0.0"
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
