--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
       - name: Trivy security check
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "newrelic/nr-otel-collector:0.0.0"
+          image-ref: "newrelic/nr-otel-collector:build-amd64"
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
