--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,13 @@ jobs:
       - name: Validate distributions third party libraries
         run: make licenses-check
 
+      - name: Check vulnerabilities
+        uses: ./.github/workflows/component_snyk.yml
+        with:
+          severity: "HIGH"
+        secrets:
+          snyk_token: ${{ secrets.CAOS_SNYK_TOKEN }}
+
       - uses: docker/setup-qemu-action@v2
 
       - uses: docker/setup-buildx-action@v2
