fix: scheduled pipelines

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,5 +23,5 @@ jobs:
     secrets:
       slack_webhook: ${{ secrets.CAOS_SLACK_WEBHOOK }}
     with:
-      tag: "${{ github.event.inputs.tag }}"
+      tag: "${{ inputs.tag }}"
       severity: "CRITICAL,HIGH"
