--- a/.github/workflows/component_snyk.yml
+++ b/.github/workflows/component_snyk.yml
@@ -17,6 +17,17 @@ jobs:
     name: Scheduled Snyk scanner
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '~1.19.4'
+          check-latest: true
+
       - name: build to generate go.mod
         run: make ci
 
