--- a/test/packaging/ansible/test.yaml
+++ b/test/packaging/ansible/test.yaml
@@ -3,9 +3,13 @@
 - name: pinned version agent installation
   import_playbook: installation-pinned.yaml
 
-# First version cannot be upgraded from a previous one
-# - name: collector upgrade
-#   import_playbook: upgrade.yaml
+- name: pinned version agent installation with full privileges
+  import_playbook: installation-pinned.yaml
+  vars:
+    install_mode: "ROOT"
+
+- name: collector upgrade
+  import_playbook: upgrade.yaml
 
 - name: agent uninstallation
   import_playbook: uninstallation.yaml
