--- a/distributions/nr-otel-collector/nr-otel-collector.service
+++ b/distributions/nr-otel-collector/nr-otel-collector.service
@@ -8,6 +8,8 @@ ExecStart=/usr/bin/nr-otel-collector $OTELCOL_OPTIONS
 KillMode=mixed
 Restart=on-failure
 Type=simple
+User=nr-otel-collector
+Group=nr-otel-collector
 
 [Install]
 WantedBy=multi-user.target
