fix: nrdot version var name

--- a/test/packaging/ansible/installation-pinned.yaml
+++ b/test/packaging/ansible/installation-pinned.yaml
@@ -5,9 +5,7 @@
   become: true
   gather_facts: yes
   vars:
-    # This is the version of the agent that will be installed.
-    # It is set by the CI.
-    target_version: "{{ lookup('ansible.builtin.env', 'NRDOT_VERSION') }}"
+    nrdot_version: "{{ lookup('ansible.builtin.env', 'NRDOT_VERSION') }}"
 
   pre_tasks:
     - name: Update package repositories
@@ -29,7 +27,7 @@
           vars:
             distribution: "nr-otel-collector"
             repo_endpoint: "http://nr-downloads-ohai-staging.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
-            target_version: "{{ target_version }}"
+            target_version: "{{ nrdot_version }}"
             collector_otlp_endpoint: "staging-otlp.nr-data.net:4317"
 
         - name: Assert version
@@ -38,7 +36,7 @@
           vars:
             target_versions:
               - exec: "nr-otel-collector --version"
-                version: "{{ target_version }}"
+                version: "{{ nrdot_version }}"
 
         - name: assert ownership
           include_tasks: ./custom_tasks/assert_ownership.yml
