feat: configurable installation-pinned role

--- a/test/packaging/ansible/installation-pinned.yaml
+++ b/test/packaging/ansible/installation-pinned.yaml
@@ -6,6 +6,7 @@
   gather_facts: yes
   vars:
     nrdot_version: "{{ lookup('ansible.builtin.env', 'NRDOT_VERSION') }}"
+    process_user: "{{ 'root' if (install_mode is defined and install_mode == 'ROOT') else 'nr-otel-collector' }}"
 
   pre_tasks:
     - name: Update package repositories
@@ -24,6 +25,9 @@
         - name: NR Otel Distribution
           include_role:
             name: caos.ansible_roles.nr_otel_distribution
+            apply:
+              environment:
+                NRDOT_MODE: "{{ 'ROOT' if (install_mode is defined and install_mode == 'ROOT') | default(omit) }}"
           vars:
             distribution: "nr-otel-collector"
             repo_endpoint: "http://nr-downloads-ohai-staging.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
@@ -41,7 +45,7 @@
         - name: assert ownership
           include_tasks: ./custom_tasks/assert_ownership.yml
           vars:
-            ownership_process: "{{ 'root' if install_mode == 'ROOT' else 'nr-otel-collector' }}"
+            ownership_process: "{{ process_user }}"
             ownership_files: "root"
 
       always:
