--- a/.github/workflows/component_provision_packaging.yml
+++ b/.github/workflows/component_provision_packaging.yml
@@ -31,6 +31,10 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: us-east-2
+          
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set branch name
         run: |
