--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -67,8 +67,6 @@ nfpms:
     description: OpenTelemetry Collector - nr-otel-collector
     license: Apache 2.0
 
-checksum:
-  name_template: '{{ .ProjectName }}_checksums.txt'
 dockers:
   - goos: linux
     goarch: amd64
@@ -110,10 +108,18 @@ docker_manifests:
 
 signs:
   -
-    # ID of the sign config, must be unique.
+    id: checksums
+
+    # Path to the checksum command.
+    cmd: ./scripts/generate_checksum.sh
+    args: [
+      "-f", "{{ .Env.artifact }}",
+    ]
+    artifacts: all
+  -
     id: signing
 
-    # Path to the signature command
+    # Path to the signature command.
     cmd: ./scripts/signing/sign.sh
     args: [
       "-f", "{{ .Env.artifact }}",
@@ -125,9 +131,10 @@ signs:
 
 publishers:
   - name: GH Publisher
-    cmd: .github/workflows/scripts/gh_publisher.sh -t {{ .Env.NR_RELEASE_TAG }} -f {{ abs .ArtifactPath }}
+    cmd: ./scripts/gh_publisher.sh -t {{ .Env.NR_RELEASE_TAG }} -f {{ abs .ArtifactPath }}
     extra_files:
       - glob: "./dist/*.asc"
+      - glob: "./dist/*.sum"
     env:
       - GITHUB_TOKEN={{ .Env.GITHUB_TOKEN }}
 
@@ -142,6 +149,10 @@ git:
 
 # Skip creating/updating gh release.
 release:
+  disable: true
+
+# Disable default checksum generator as we use a custom one per each artifact.
+checksum:
   disable: true
 
 # Skip auto-generating changelog.
