--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: --snapshot --clean --skip-validate --skip-sign --timeout 2h
+          args: --snapshot --clean --skip-sign --timeout 2h
         env:
           GORELEASER_CURRENT_TAG: 0.0.0
 
