disable prometheus normalization feature-gate by default

--- a/distributions/nr-otel-collector/nr-otel-collector.conf
+++ b/distributions/nr-otel-collector/nr-otel-collector.conf
@@ -6,4 +6,7 @@ NEW_RELIC_MEMORY_LIMIT_MIB=100
 
 # Command-line options for the nr-otel-collector service.
 # Run `/usr/bin/nr-otel-collector --help` to see all available options.
-OTELCOL_OPTIONS="--config=/etc/nr-otel-collector/config.yaml"
+#
+# pkg.translator.prometheus.NormalizeName feature-gate is disabled by default to avoid altering prometheus metrics
+# names when reported through non-prometheus exporters.
+OTELCOL_OPTIONS="--config=/etc/nr-otel-collector/config.yaml --feature-gates=-pkg.translator.prometheus.NormalizeName"
