disable prometheus normalize name feature gate in dockerfile

--- a/distributions/nr-otel-collector/Dockerfile
+++ b/distributions/nr-otel-collector/Dockerfile
@@ -10,5 +10,5 @@ COPY --from=certs /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certifica
 COPY --chmod=755 nr-otel-collector /nr-otel-collector
 COPY configs/nr-otel-collector-agent.yaml /etc/nr-otel-collector/config.yaml
 ENTRYPOINT ["/nr-otel-collector"]
-CMD ["--config", "/etc/nr-otel-collector/config.yaml"]
+CMD ["--config", "/etc/nr-otel-collector/config.yaml", "--feature-gates=-pkg.translator.prometheus.NormalizeName"]
 EXPOSE 4317 55678 55679
