fix release bucket

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -27,8 +27,8 @@ jobs:
       SCHEMA_BRANCH: "main"
       RUN_ID: ${{ github.run_id }}
       TAG: ${{ github.event.release.tag_name }}
-      AWS_S3_BUCKET_NAME: "nr-downloads-ohai-production"
-      AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock-production"
+      AWS_S3_BUCKET_NAME: "nr-downloads-main"
+      AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock"
       ASSETS_TYPE: "all"
 
   release-docker:
