--- a/.github/workflows/ci-release-on-demand.yml
+++ b/.github/workflows/ci-release-on-demand.yml
@@ -27,7 +27,7 @@ jobs:
       SCHEMA_BRANCH: "main"
       RUN_ID: ${{ github.run_id }}
       TAG: ${{ github.event.inputs.tag }}
-      AWS_S3_BUCKET_NAME: "nr-downloads-ohai"
+      AWS_S3_BUCKET_NAME: "nr-downloads-main"
       AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock"
       ASSETS_TYPE: "all"
 
