NR-122103 feat: process monitoring default config

--- a/configs/nr-otel-collector-agent-linux.yaml
+++ b/configs/nr-otel-collector-agent-linux.yaml
@@ -53,6 +53,11 @@ receivers:
             enabled: false
       processes:
       process:
+        metrics:
+          process.cpu.utilization:
+            enabled: true
+          process.cpu.time:
+            enabled: false
 
   filelog:
     include:
