--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,5 +24,5 @@ jobs:
     secrets:
       slack_webhook: ${{ secrets.CAOS_SLACK_WEBHOOK }}
     with:
-      tag: "${{ inputs.tag || '0.0.1-rc' }}"
+      tag: "${{ inputs.tag || 'latest' }}"
       severity: "CRITICAL,HIGH"
