--- a/configs/nr-otel-collector-agent-linux.yaml
+++ b/configs/nr-otel-collector-agent-linux.yaml
@@ -166,8 +166,6 @@ processors:
 
   batch:
 
-  resource:
-
   resourcedetection:
     detectors: ["env", "system"]
 
@@ -207,11 +205,11 @@ service:
       exporters: [logging,otlp]
     traces:
       receivers: [otlp]
-      processors: [transform, resourcedetection, resourcedetection/cloud, resource, batch]
+      processors: [transform, resourcedetection, resourcedetection/cloud, batch]
       exporters: [logging, otlp]
     logs:
       receivers: [otlp, filelog]
-      processors: [transform, resourcedetection, resourcedetection/cloud, resource, batch]
+      processors: [transform, resourcedetection, resourcedetection/cloud, batch]
       exporters: [logging, otlp]
 
   extensions: [health_check]
