--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -99,7 +99,7 @@ jobs:
         uses: newrelic/fargate-runner-action@main
         with:
           aws_region: us-east-2
-          container_make_target: "test/canaries PREVIOUS_IMAGE='${{ env.IMAGE }}:${{ env.PREVIOUS_TAG }}-rc' CURRENT_IMAGE='newrelic/${{ env.NR_DISTRO }}:${{ env.NR_VERSION }}-rc' ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2' LIMIT=all"
+          container_make_target: "test/canaries PREVIOUS_IMAGE='newrelic/${{ env.PREVIOUS_NR_DISTRO }}:${{ env.PREVIOUS_NR_VERSION }}-rc' CURRENT_IMAGE='newrelic/${{ env.NR_DISTRO }}:${{ env.NR_VERSION }}-rc' ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2' LIMIT=all"
           ecs_cluster_name: caos_otel_releases
           task_definition_name: otel-releases-td
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
