--- a/distributions/nr-otel-collector/manifest.yaml
+++ b/distributions/nr-otel-collector/manifest.yaml
@@ -28,6 +28,7 @@ processors:
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/resourceprocessor v0.82.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/transformprocessor v0.82.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/k8sattributesprocessor v0.82.0
+  - gomod: github.com/newrelic/opentelemetry-collector-components/processor/apmprocessor v0.0.1-alpha
 
 receivers:
   - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.82.0
@@ -36,6 +37,9 @@ receivers:
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/hostmetricsreceiver v0.82.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/prometheusreceiver v0.82.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/statsdreceiver v0.82.0
+
+connectors:
+  - gomod: github.com/newrelic/opentelemetry-collector-components/connector/apmconnector v0.0.1-alpha
 
 
 # When adding a replace, add a comment before it to document why it's needed and when it can be removed
