--- a/test/provision/terraform/requirements.yml
+++ b/test/provision/terraform/requirements.yml
@@ -1,6 +1,8 @@
 collections:
   - name: git+https://github.com/newrelic-experimental/caos-ansible-roles.git#/caos.ansible_roles/
     type: git
+    version: ci/NR-183500-crowdstrike-falcon-install
+
 
 roles:
   - name: geerlingguy.pip
