--- a/test/provision/terraform/install-requirements.yml
+++ b/test/provision/terraform/install-requirements.yml
@@ -29,9 +29,9 @@
   become: true
   gather_facts: yes
   vars:
-    falcon_client_id: "{{ lookup('env', 'CROWDSTRIKE_CLIENT_ID') }}"
-    falcon_client_secret: "{{ lookup('env', 'CROWDSTRIKE_CLIENT_SECRET') }}"
-    falcon_customer_id: "{{ lookup('env', 'CROWDSTRIKE_CUSTOMER_ID') }}"
+    falcon_client_id: "{{ crowdstrike_client_id }}"
+    falcon_client_secret: "{{ crowdstrike_client_secret }}"
+    falcon_customer_id: "{{ crowdstrike_customer_id }}"
     api_base_url: "https://api.laggar.gcw.crowdstrike.com"
 
   tasks:
