--- a/.github/workflows/component_canaries.yml
+++ b/.github/workflows/component_canaries.yml
@@ -66,7 +66,7 @@ jobs:
 #          aws_region: us-east-2
 #          container_make_target: "test/provision-clean TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }}"
 #          ecs_cluster_name: caos_otel_releases
-#          task_definition_name: otel-releases-td
+#          task_definition_name: otel-releases
 #          cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
 #          cloud_watch_logs_stream_name: ecs/test-otel-releases
 #          aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
@@ -81,7 +81,7 @@ jobs:
           aws_region: us-east-2
           container_make_target: "test/provision TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2 TAG_OR_UNIQUE_NAME=canary:${{ env.TAG }}-${{ env.PLATFORM }} NRDOT_VERSION=${{ env.NR_VERSION }}"
           ecs_cluster_name: caos_otel_releases
-          task_definition_name: otel-releases-td
+          task_definition_name: otel-releases
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
@@ -101,7 +101,7 @@ jobs:
           aws_region: us-east-2
           container_make_target: "test/canaries PREVIOUS_IMAGE='newrelic/${{ env.PREVIOUS_NR_DISTRO }}:${{ env.PREVIOUS_NR_VERSION }}-rc' CURRENT_IMAGE='newrelic/${{ env.NR_DISTRO }}:${{ env.NR_VERSION }}-rc' ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG }}-${{ env.PLATFORM }}-inventory.ec2' LIMIT=all"
           ecs_cluster_name: caos_otel_releases
-          task_definition_name: otel-releases-td
+          task_definition_name: otel-releases
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
