--- a/.github/workflows/component_provision_packaging.yml
+++ b/.github/workflows/component_provision_packaging.yml
@@ -54,7 +54,7 @@ jobs:
           aws_region: us-east-2
           container_make_target: "test/provision TF_VAR_inventory_output=/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2 TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }} NRDOT_VERSION=${{ env.NR_VERSION }}"
           ecs_cluster_name: caos_otel_releases
-          task_definition_name: otel-releases-td
+          task_definition_name: otel-releases
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
@@ -74,7 +74,7 @@ jobs:
           aws_region: us-east-2
           container_make_target: "test/packaging ANSIBLE_INVENTORY='/srv/runner/inventory/${{ env.TAG_OR_UNIQUE_NAME }}-inventory.ec2' LIMIT=testing_hosts_linux NRDOT_VERSION=${{ env.NR_VERSION }}"
           ecs_cluster_name: caos_otel_releases
-          task_definition_name: otel-releases-td
+          task_definition_name: otel-releases
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
@@ -87,7 +87,7 @@ jobs:
           aws_region: us-east-2
           container_make_target: "test/provision-clean TAG_OR_UNIQUE_NAME=${{ env.TAG_OR_UNIQUE_NAME }}"
           ecs_cluster_name: caos_otel_releases
-          task_definition_name: otel-releases-td
+          task_definition_name: otel-releases
           cloud_watch_logs_group_name: /ecs/test-prerelease-otel-releases
           cloud_watch_logs_stream_name: ecs/test-otel-releases
           aws_vpc_subnet: ${{ secrets.AWS_VPC_SUBNET }}
