ci: pass platform attribute to provisioner (#94)
* ci: pass platform attribute to provisioner

* style: fmt

--- a/test/provision/terraform/caos-linux.auto.tfvars.dist
+++ b/test/provision/terraform/caos-linux.auto.tfvars.dist
@@ -7,6 +7,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "ubuntu"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -19,6 +20,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "ubuntu"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -31,6 +33,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "centos"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -43,6 +46,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "cloud-user"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -55,6 +59,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "ec2-user"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -67,6 +72,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "ec2-user"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -79,6 +85,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "ec2-user"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -91,6 +98,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "ec2-user"
     python          = "/usr/bin/python"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -103,6 +111,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "admin"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -115,6 +124,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "admin"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -127,6 +137,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "admin"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -139,6 +150,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "admin"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -151,6 +163,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "ec2-user"
     python          = "/usr/bin/python"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -163,6 +176,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "ec2-user"
     python          = "/usr/bin/python"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -175,6 +189,7 @@ ec2_otels = {
     instance_type   = "t3a.small"
     username        = "ec2-user"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
@@ -187,6 +202,7 @@ ec2_otels = {
     instance_type   = "t4g.small"
     username        = "ec2-user"
     python          = "/usr/bin/python3"
+    platform        = "linux"
     tags            = {
       "otel_role" = "agent"
     }
