--- a/.github/workflows/ci-goreleaser.yml
+++ b/.github/workflows/ci-goreleaser.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   check-goreleaser:
     name: Check GoReleaser Configuration
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
