--- a/.github/workflows/ci-release-on-demand.yml
+++ b/.github/workflows/ci-release-on-demand.yml
@@ -35,7 +35,7 @@ jobs:
 #  release-docker:
 #    name: Release docker images
 #
-#    runs-on: ubuntu-20.04
+#    runs-on: ubuntu-latest
 #
 #    steps:
 #      - uses: actions/checkout@v3
