--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -33,7 +33,7 @@ jobs:
   release-docker:
     name: Release docker images
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
