--- a/.github/workflows/component_canary_alerts.yml
+++ b/.github/workflows/component_canary_alerts.yml
@@ -38,7 +38,7 @@ on:
         type: string
 
 env:
-  AWS_ASSUME_ROLE: 'arn:aws:iam::018789649883:role/caos-pipeline-oidc-otel-releases'
+  AWS_ASSUME_ROLE: "arn:aws:iam::018789649883:role/caos-pipeline-oidc-otel-releases"
   ANSIBLE_FORKS: 20
 
 permissions:
@@ -46,7 +46,7 @@ permissions:
 
 jobs:
   provision:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
