--- a/.github/workflows/ci-goreleaser.yml
+++ b/.github/workflows/ci-goreleaser.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   check-goreleaser:
     name: Check GoReleaser Configuration
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -32,9 +32,9 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Setup Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
-          go-version: '~1.20.8'
+          go-version: '~1.22.3'
           check-latest: true
 
       - name: Generate the sources
