--- a/.github/workflows/ci-prerelease.yml
+++ b/.github/workflows/ci-prerelease.yml
@@ -11,7 +11,7 @@ jobs:
   prerelease:
     name: Pre-release
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -25,9 +25,9 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5
         with:
-          go-version: '~1.20.8'
+          go-version: '~1.22.3'
           check-latest: true
 
       - name: Generate distribution sources
@@ -74,7 +74,7 @@ jobs:
       ASSETS_TYPE: "all"
 
   molecule-tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [publishing-to-s3]
     steps:
       - uses: actions/checkout@v3
@@ -90,7 +90,7 @@ jobs:
           repo_base_url: "http://nr-downloads-ohai-staging.s3-website-us-east-1.amazonaws.com/infrastructure_agent"
           package_name: ${{ env.NR_DISTRO }}
           package_version: ${{ env.NR_VERSION }}
-          platforms: "al2,al2023,centos7,centos8,debian-bullseye,debian-bookworm,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204"
+          platforms: "al2,al2023,centos7,centos8,debian-bullseye,debian-bookworm,redhat8,redhat9,suse15.2,suse15.3,suse15.4,ubuntu1604,ubuntu1804,ubuntu2004,ubuntu2204,ubuntu2404"
 
   packaging-tests:
     uses: ./.github/workflows/component_provision_packaging.yml
