--- a/.github/workflows/ci-goreleaser.yml
+++ b/.github/workflows/ci-goreleaser.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
-          version: latest
+          version: '~> v1'
           args: --snapshot --rm-dist --skip-sign --skip-sbom --timeout 2h
         env:
           GORELEASER_CURRENT_TAG: 0.0.0
